# sigil

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
benches/: pepperflake_benches.rs  sigil_benches.rs
src/: lib.rs
