[package]
name = "sigil"
version = "0.1.0"
edition = "2021"
description = "Fast, unforgeable, sortable 64-bit ID generation"
authors = ["Roman Agilov agilovr@gmail.com"]
repository = "https://github.com/agilov/sigil"
readme = "README.md"
license = "MIT"
keywords = ["id", "uid", "snowflake", "generator", "unique"]
categories = ["algorithms", "development-tools"]

[dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sigil_benches"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"